argocd/apps/inbucket/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: inbucket-http
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - inbucket.127.0.0.1.nip.io
  rules:
    - backendRefs:
        - name: inbucket
          port: 9000
      matches:
        - path:
            type: PathPrefix
            value: /
